--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "formik": "^2.2.1",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "particles-bg": "^2.5.0",
     "prop-types": "^15.7.2",
@@ -51,7 +52,8 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2"
+    "pretty-quick": "^3.0.2",
+    "sass-loader": "^10.1.0"
   },
   "husky": {
     "hooks": {
