--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "react-voice-recorder": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
