--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "formik": "^2.2.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
-    "particles-bg": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-transition-group": "^4.4.1",
-    "react-voice-recorder": "^2.0.7"
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
